refactor: simplificar rangos de montos de crédito en el cuestionario

--- a/public/cuestionario/publico/index.html
+++ b/public/cuestionario/publico/index.html
@@ -481,9 +481,7 @@
                 { value: '100k-250k', label: '₡100,000 - ₡250,000', min: 100000, max: 250000 },
                 { value: '300k-450k', label: '₡300,000 - ₡450,000', min: 300000, max: 450000 },
                 { value: '500k-690k', label: '₡500,000 - ₡690,000', min: 500000, max: 690000 },
-                { value: '690k-1m', label: '₡690,000 - ₡1,000,000', min: 690000, max: 1000000 },
-                { value: '1m-1.5m', label: '₡1,000,000 - ₡1,500,000', min: 1000000, max: 1500000 },
-                { value: '1.5m-2.2m', label: '₡1,500,000 - ₡2,200,000', min: 1500000, max: 2200000 }
+                { value: '690k+', label: '₡690,000 o más', min: 690000, max: 999999999 }
             ];
         }
 
