--- a/public/cuestionario/propio/index.html
+++ b/public/cuestionario/propio/index.html
@@ -134,6 +134,7 @@
                                 <option value="100k-300k">100 mil - 300 mil</option>
                                 <option value="300k-500k">300 mil - 500 mil</option>
                                 <option value="500k-690k">500 mil - 690 mil</option>
+                                <option value="690+">690 mil o más</option>
                             </select>
                         </div>
                         <div>
