--- a/public/cuestionario/publico/index.html
+++ b/public/cuestionario/publico/index.html
@@ -127,8 +127,12 @@
                         <div class="grid md:grid-cols-2 gap-4">
                             <div>
                                 <label class="block text-sm font-medium text-foreground mb-1">Monto aproximado que desea solicitar *</label>
-                                <select name="monto" id="montoSelect" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
-                                    <option value="">Selecciona un monto</option>
+                                <select name="monto" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
+                                    <option value="">Selecciona un rango</option>
+                                    <option value="100k-300k">100 mil - 300 mil</option>
+                                    <option value="300k-500k">300 mil - 500 mil</option>
+                                    <option value="500k-690k">500 mil - 690 mil</option>
+                                    <option value="690+">690 mil o más</option>
                                 </select>
                             </div>
                             <div>
@@ -371,175 +375,9 @@
             document.getElementById('alert').classList.add('hidden');
         }
 
-        // Configuraciones de préstamos (se cargan desde la API)
-        let loanConfigs = {
-            microcredito: { monto_minimo: 100000, monto_maximo: 690000 },
-            regular: { monto_minimo: 690000, monto_maximo: 2200000 }
-        };
-        let montosUnificados = [];
-        const LIMITE_MICROCREDITO = 690000; // Por debajo = microcrédito, igual o mayor = crédito regular
-
-        // Formatear número a colones
-        function formatCurrency(num) {
-            return '₡' + num.toLocaleString('en-US');
-        }
-
-        // Redondear a número "bonito" (múltiplo de 50,000 o 100,000)
-        function redondearMonto(num, direccion = 'down') {
-            // Para montos menores a 1M, redondear a múltiplos de 50,000
-            // Para montos mayores, redondear a múltiplos de 100,000 o 500,000
-            let multiplo;
-            if (num < 500000) {
-                multiplo = 50000;
-            } else if (num < 2000000) {
-                multiplo = 100000;
-            } else {
-                multiplo = 500000;
-            }
-
-            if (direccion === 'up') {
-                return Math.ceil(num / multiplo) * multiplo;
-            } else {
-                return Math.floor(num / multiplo) * multiplo;
-            }
-        }
-
-        // Generar rangos de monto automáticamente con números redondeados
-        function generarRangosMonto(min, max) {
-            const rangos = [];
-            const rango = max - min;
-            const paso = rango / 3;
-
-            for (let i = 0; i < 3; i++) {
-                let desde, hasta;
-
-                if (i === 0) {
-                    desde = min; // El mínimo se mantiene
-                } else {
-                    desde = redondearMonto(min + (paso * i), 'up');
-                }
-
-                if (i === 2) {
-                    hasta = max; // El máximo se mantiene
-                } else {
-                    hasta = redondearMonto(min + (paso * (i + 1)), 'down');
-                }
-
-                // Crear value legible
-                const desdeK = desde / 1000;
-                const hastaK = hasta / 1000;
-                let value;
-                if (hastaK >= 1000) {
-                    value = (desdeK / 1000).toFixed(1) + 'm-' + (hastaK / 1000).toFixed(1) + 'm';
-                } else {
-                    value = Math.round(desdeK) + 'k-' + Math.round(hastaK) + 'k';
-                }
-
-                rangos.push({
-                    value: value,
-                    label: formatCurrency(desde) + ' - ' + formatCurrency(hasta),
-                    min: desde,
-                    max: hasta
-                });
-            }
-            return rangos;
-        }
-
-        // Cargar configuraciones desde la API y crear rangos unificados
-        async function loadLoanConfigurations() {
-            try {
-                const response = await fetch(`${API_BASE_URL}/api/loan-configurations`);
-                const configs = await response.json();
-
-                const micro = configs.find(c => c.tipo === 'microcredito');
-                const regular = configs.find(c => c.tipo === 'regular');
-
-                if (micro) {
-                    loanConfigs.microcredito = micro;
-                }
-
-                if (regular) {
-                    loanConfigs.regular = regular;
-                }
-
-                // Crear rangos unificados basados en la configuración
-                crearRangosUnificados();
-                console.log('Configuraciones cargadas:', loanConfigs);
-            } catch (error) {
-                console.error('Error cargando configuraciones de préstamos:', error);
-                // Usar valores por defecto si falla la API
-                crearRangosUnificados();
-            }
-
-            // Poblar el select de montos
-            updateMontoOptions();
-        }
-
-        // Crear rangos de monto unificados basados en configuración
-        function crearRangosUnificados() {
-            const microMin = Number(loanConfigs.microcredito.monto_minimo);
-            const microMax = Number(loanConfigs.microcredito.monto_maximo);
-            const regularMin = Number(loanConfigs.regular.monto_minimo);
-            const regularMax = Number(loanConfigs.regular.monto_maximo);
-
-            montosUnificados = [];
-
-            // Rangos de Micro Crédito (dinámicos desde config)
-            const microRangos = generarRangosMonto(microMin, microMax);
-            microRangos.forEach(r => {
-                r.tipo = 'microcredito';
-                montosUnificados.push(r);
-            });
-
-            // Rangos de Crédito Regular (dinámicos desde config)
-            const regularRangos = generarRangosMonto(regularMin, regularMax);
-            regularRangos.forEach(r => {
-                r.tipo = 'regular';
-                montosUnificados.push(r);
-            });
-        }
-
         // Determinar tipo de crédito basado en el monto seleccionado
         function determinarTipoCredito(montoValue) {
-            const rango = montosUnificados.find(m => m.value === montoValue);
-            if (!rango) return 'microcredito';
-            return rango.tipo || (rango.max >= LIMITE_MICROCREDITO ? 'regular' : 'microcredito');
-        }
-
-        // Poblar opciones de monto con rangos unificados
-        function updateMontoOptions() {
-            const montoSelect = document.getElementById('montoSelect');
-
-            if (!montoSelect) {
-                console.error('No se encontró el select de montos');
-                return;
-            }
-
-            // Limpiar opciones actuales
-            while (montoSelect.firstChild) {
-                montoSelect.removeChild(montoSelect.firstChild);
-            }
-
-            // Agregar opción por defecto
-            const defaultOpt = document.createElement('option');
-            defaultOpt.value = '';
-            defaultOpt.textContent = 'Selecciona un monto';
-            montoSelect.appendChild(defaultOpt);
-
-            // Agregar opciones agrupadas por tipo
-            ['microcredito', 'regular'].forEach(function(tipo) {
-                const items = montosUnificados.filter(r => r.tipo === tipo);
-                if (items.length === 0) return;
-                const optGroup = document.createElement('optgroup');
-                optGroup.label = tipo === 'microcredito' ? 'Micro Crédito' : 'Crédito Regular';
-                items.forEach(function(r) {
-                    const opt = document.createElement('option');
-                    opt.value = r.value;
-                    opt.textContent = r.label;
-                    optGroup.appendChild(opt);
-                });
-                montoSelect.appendChild(optGroup);
-            });
+            return montoValue === '690+' ? 'regular' : 'microcredito';
         }
 
         function formatSalario(value) {
@@ -872,9 +710,6 @@
 
             // Verificar si el crédito está bloqueado (persistido en localStorage)
             checkCreditoBloqueadoStorage();
-
-            // Cargar configuraciones de préstamos desde la API
-            loadLoanConfigurations();
 
             showStep(currentStep);
             document.querySelectorAll('input[name="interes"]').forEach(input => {
