--- a/public/cuestionario/publico/index.html
+++ b/public/cuestionario/publico/index.html
@@ -173,7 +173,7 @@
                                 </select>
                             </div>
                             <div>
-                                <label class="block text-sm font-medium text-foreground mb-1">Salario Bruto *</label>
+                                <label class="block text-sm font-medium text-foreground mb-1">Salario Líquido *</label>
                                 <input type="text" name="salario_exacto" id="salarioExacto" placeholder="Ej: ₡450,000" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
                             </div>
                         </div>
